# minimize-snap-traj-optimize

./: .clang-format  .gitignore  CMakeLists.txt  README.md  minimizer_snap_example.cpp
minimizer_snap/: matplotlibcpp.hpp  minimizer_snap_optimization.cpp  minimizer_snap_optimization.h
